packages/parser/test/parser/E0106-import-declaration.txt
import * as T * as U from "./test"
===== err =====
anonymous:1:14: ParseError: E0106 - Expected comma after import declaration specifier
1 | import * as T * as U from "./test"
  |              ^
